--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
         <meta httpEquiv="X-UA-Compatible" content="IE=edge"/>
         <meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1"/>
-        <meta name="description" content="Conscientious, results-driven, articulate and analytical software engineer with several years’ exposure in data-driven software engineering teams; primarily focusing on backend and systems development of large-scale distributed systems."/>
-        <meta name="author" content="Sudharshan Ravindran"/>
-        <meta name="keywords" content="sudharshan, ravindran, suddi, sudharshan ravindran, react, resume, cv"/>
-        <title>Sudharshan Ravindran</title>
+        <meta name="description" content=""/>
+        <meta name="author" content="Yang Wang"/>
+        <meta name="keywords" content="yang, wang, yang wang, luanshixia, dreambuild, cmu, microsoft, azure, resume, cv"/>
+        <title>Yang Wang</title>
         <link rel="apple-touch-icon-precomposed" sizes="57x57" href="public/favicon/apple-touch-icon-57x57.png"/>
         <link rel="apple-touch-icon-precomposed" sizes="114x114" href="public/favicon/apple-touch-icon-114x114.png"/>
         <link rel="apple-touch-icon-precomposed" sizes="72x72" href="public/favicon/apple-touch-icon-72x72.png"/>
